--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,4 @@
 # nginx.conf
-
 worker_processes 1;
 
 events {
@@ -21,6 +20,18 @@ http {
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri /index.html;
+        }
+
+        # Proxy API requests to Solana Devnet
+        location /api {
+            proxy_pass https://api.devnet.solana.com;
+            proxy_set_header Host api.devnet.solana.com;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
     }
 }
